common/src/main/webapp/less/style.less
/* ... */
.target-brightness-cell {
  .form {
    height: 100%;
  }
}

.explore-table.target-asterism-table {
  height: auto;
  max-height: 150px;
  overflow-y: scroll;
}

.target-asterism-editor {
  align-self: stretch;
  outline: 3px solid pink !important;
}

.target-grid {
  display: grid;
  grid-gap: 0.5em;
  grid-row-gap: 0.3em;
  padding: 0.5em;
  height: 100%;
}

.tile-xl-width,
.tile-lg-width,
.tile-md-width {
  .target-grid {
    grid-template-columns: 1fr 2fr;
    grid-template-rows: min-content min-content min-content 1fr;
  }

  .target-aladin-cell {
    grid-row: span 4;
  }
}

.target-rv-controls {
  justify-self: stretch;

  .explore-grow-1 {
    margin-left: 0.3em !important;
  }
}

.catalogue-form {
  height: max-content; // keep it from expanding to fill cell
}

// for the ra and dec inputs expand
.target-ra-dec-min-width {
  .ui.input {
    width: 100%;
  }
}

.error-label-mixin() {
  color: var(--negative-text-color);
  background-color: var(--negative-background-color);
}

.ui.label.explore-error-label {
  .error-label-mixin();
}

.ui.form .field > .explore-error-label {
  .error-label-mixin();
}

.ui.form .field > label {
  margin: 0;
}

.ui.basic.label.explore-section-label {
  background-color: transparent;
  border: none;
  letter-spacing: 0.15em;
  border-radius: 0;
  border-bottom: 1px solid var(--input-color);
}

.explore-table-units-label {
  margin-left: 0.25em;
  font-size: x-small;
}

.explore-units-label {
  margin-left: 0.25em;
}

.proposal-details-grid {
  /*
  Requirement was for the entire second column to go below
  the first column for narrow screens. In order to keep tab
  order consistent, the elements are defined in the single
  column order in the DOM, and CSS is used to place them in
  the correct place in the 2 column grid.
  */
  @proposal-details-grid-items: 7;

  each(range(1, @proposal-details-grid-items), {
    @num-in-first-col: ceil((@proposal-details-grid-items / 2));
    @second-col: boolean(@value > @num-in-first-col);
    @col-start: if(@second-col, 2, 1);
    @row-start: if(@second-col, @value - @num-in-first-col, @value);

    & > *:nth-child(@{value}) {
      @media not all and (max-width: @two-column-break) {
        grid-row-start: @row-start;
        grid-column-start: @col-start;
      }
    }
  });
}

.minimum-percent {
  width: 5.5em;
  padding-left: 0.5em !important;

  div& .ui.input input {
    text-align: right;
  }

  span& {
    text-align: end;
  }
}

.version {
  font-size: smaller;
  float: right;

  // CopyToClipboard
  div {
    display: inline-block;
    margin-left: 5px;
  }
}

// The split edit button and the band totals
.partner-split-data {
  &,
  div& data {
    width: 6em;
  }

  // the text only "hours".
  span& {
    text-align: end;
    padding-right: 6px; // determined empirically from dev tools
  }

  // The div containing the flag and percent text.
  data > div {
    display: flex;

    // The percent text
    span {
      flex: 1;
      text-align: end;
    }
  }
}

.version.uncopied {
  // CopyToClipboard
  div {
    cursor: pointer;
  }
}

div.partner-split-total {
  &,
  & > div > data {
    width: 5.5em;
  }

  & > div > data {
    text-align: end;
  }
}

img.partner-split-flag {
  height: 16px;
  width: 32px;
  margin-right: 0.5em;
}

.partner-splits-editor-error {
  text-align: left;
  font-size: larger;
}

.explore-table {
  position: relative;
  border: 0.2px solid var(--site-border-color);
  border-radius: @menuBorderRadius;

  .table {
    min-height: 60px;
    border-collapse: collapse;

    &.virtualized {
      height: 100%;
    }
  }

  tr.explore-table-row-selected,
  .tr.explore-table-row-selected {
    box-shadow: inset 0 1px 0 0 var(--explore-selected-box-color),
      inset 0 -1px 0 0 var(--explore-selected-box-color) !important; // Important used to override hover.

    background: var(--table-selected-background) !important;
  }

  th,
  .th {
    border: 0 !important;
    text-transform: none !important;
    white-space: nowrap;
  }

  td,
  .td {
    border: 0 !important;
    white-space: nowrap;
  }

  .scroll-button {
    position: absolute;
    right: 1em;
    border-color: var(--explore-selected-box-color) !important;
  }

  & .selected-up {
    top: 2.5em;
  }

  & .selected-down {
    bottom: 1.1em;
  }
}

.explore-brightnesses-wrapper {
  grid-column: 1 / -1;
  justify-self: stretch;
  align-self: stretch;
}

.explore-brightnesses-container {
  height: 100%;
  display: flex;
  flex-direction: column;
  border: none;

  > .table {
    height: 100%;
    margin: 0;

    thead,
    tr {
      display: block;
    }

    tbody {
      display: block;
    }

    .th {
      white-space: nowrap;
    }
  }
}

// For very small tables hide the headers and add fake "header" to the left of the row
.tile-xs-width {
  .target-grid {
    grid-template-columns: 1fr;
  }

  .explore-brightnesses-container {
    .ui.table,
    thead,
    tbody,
    th,
    td,
    tr {
      // SUI already has an !important
      display: block !important;
    }

    // Hide table headers (but not display: none;, for accessibility)
    thead tr {
      position: absolute;
      top: -9999px;
      left: -9999px;
    }
  }
}

.ui.table.partner-splits-editor-table {
  th:last-child,
  td:last-child,
  td:last-child > span > div {
    width: 4em;
  }

  .ui.form & input {
    text-align: right;
  }
}

// position all fields relative so that error labels position properly.
.ui .field {
  position: relative;
}

.explore-input-error-mixin() {
  left: 30%;
  z-index: 3;
}

.explore-input-error-tooltip {
  transform: translate(0, -33px);
  .explore-input-error-mixin();
}

.explore-input-error-tooltip-below {
  transform: translate(0, 20px);
  .explore-input-error-mixin();
}

.ui.button.blended-button {
  border: none;
  background-color: transparent;
  box-shadow: none;

  &:hover {
    outline: 1px var(--site-border-color) solid;
  }
}
/* ... */

